More Bug Squashing

--- a/wwr/stylers/site-plan-rafting.css
+++ b/wwr/stylers/site-plan-rafting.css
@@ -1,5 +1,5 @@
-@import url('https://fonts.google.com/specimen/Black+Han+Sans?query=Black+Han+Sans');
-@import url('https://fonts.google.com/specimen/Roboto');
+@import url('https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 header {
     padding: 20px;
@@ -53,9 +53,9 @@ nav a:hover {
     --heading-font: 'Black Han Sans', serif;
     --paragraph-font: 'Roboto', serif;
 
-    --nav-background-color: #XXXXXX;
-    --nav-link-color: #xxxxxxx;
-    --nav-hover-link-color: #xxxxxxx;
-    --nav-hover-background-color: #XXXXXX;
+    --nav-background-color: #000000;
+    --nav-link-color: #0000FF;
+    --nav-hover-link-color: #FFA500;
+    --nav-hover-background-color: #FFFFFF;
 }
 
